--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <h3>Contact</h3>
 
   <!--    MAP    -->
-<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12099.796147205518!2d-74.00655443066123!3d40.697120036291494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1549857736441" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12099.796147205518!2d-74.00655443066123!3d40.697120036291494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1549857736441" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 
   <!--   contact form -->
 
